  improve compatibility with other storage management tools, especially
  Amazon's AWS Console.

  * GoogleStorageService

- Google Storage (GS) service class added to provide specific support
  for Google's storage provider.

  * S3Service

- Methods for setting and using AWS DevPay credentials moved from
  S3Service to RestS3Service.

  * SOAP implementation

- REMOVED from project.


KUDOS TO:

- Claudio Cherubino of Google Inc., for significant refactoring work
  and the addition of full support for the Google Storage service.


-------------
Version 0.7.4
-------------

TOOLKIT

  * General

- Added support for the new Reduced Redundancy Storage (RRS) class
  for objects. This discounted storage class can be applied when an
  object is created, overwritten or copied. The storage class can be
  set per-object, or a default value can be set with the property
  's3service.defaultStorageClass'. Storage classes can be disabled
  altogether for services that don't support them using the
  's3service.enable-storage-classes' property.
- Added support for buckets located in the Asia Pacific
  (Singapore) location "ap-southeast-1".
- Eucalyptus-friendly generated URLs (#14). JetS3t configuration
  properties 's3service.s3-endpoint-virtual-path',
  's3service.s3-endpoint-http-port' and
  's3service.s3-endpoint-https-port' are no longer ignored when
  generating signed or torrent URLs.
- Bash shell scripts now support cygwin by automatically
  converting classpaths to Windows format.
- Improved configurability and flexibility by removing dependence
  on the VM-wide static Constants#S3_HOSTNAME constant value
  (see API Changes below)

  * CloudFront Service

- NOTE: These changes break backward-compatibility for some of the
  CloudFrontService and related class interfaces.
- Updated service to support API version 2010-06-01 which adds
  support for HTTPS-only distributions (a.k.a. RequiredProtocols)
- Updated service to support API version 2010-05-01 which adds